# emerald-em

./: .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
data/text/en_US/: abilities.txt  items.txt  moves.txt  natures.txt  pokemons.txt
data/text/fr_FR/: abilities.txt  items.txt  moves.txt  natures.txt  pokemons.txt
emerald/: Makefile
emerald/.github/ISSUE_TEMPLATE/: 01_battle_engine_bugs.yaml  02_battle_ai_issues.yaml  03_feature_requests.yaml  04_other_errors.yaml
emerald/asm/macros/: event.inc
emerald/data/: battle_anim_scripts.s  event_scripts.s
emerald/data/maps/DewfordTown_Gym/: scripts.inc
emerald/data/maps/DewfordTown_Hall/: scripts.inc
emerald/data/maps/DewfordTown_House2/: scripts.inc
emerald/data/maps/FallarborTown_CozmosHouse/: scripts.inc
emerald/data/maps/FortreeCity_Gym/: scripts.inc
emerald/data/maps/FortreeCity_House2/: scripts.inc
emerald/data/maps/FortreeCity_House4/: scripts.inc
emerald/data/maps/GraniteCave_1F/: scripts.inc
emerald/data/maps/GraniteCave_StevensRoom/: scripts.inc
emerald/data/maps/LavaridgeTown_Gym_1F/: scripts.inc
emerald/data/maps/LavaridgeTown_HerbShop/: scripts.inc
emerald/data/maps/LilycoveCity_House2/: scripts.inc
emerald/data/maps/MauvilleCity/: scripts.inc
emerald/data/maps/MauvilleCity_Gym/: scripts.inc
emerald/data/maps/MauvilleCity_House1/: scripts.inc
emerald/data/maps/MossdeepCity/: scripts.inc
emerald/data/maps/MossdeepCity_Gym/: scripts.inc
emerald/data/maps/MossdeepCity_SpaceCenter_1F/: scripts.inc
emerald/data/maps/MossdeepCity_StevensHouse/: scripts.inc
emerald/data/maps/MtPyre_1F/: scripts.inc
emerald/data/maps/OldaleTown/: scripts.inc
emerald/data/maps/PacifidlogTown_House2/: scripts.inc
emerald/data/maps/PetalburgCity_Gym/: scripts.inc
emerald/data/maps/PetalburgCity_WallysHouse/: scripts.inc
emerald/data/maps/PetalburgWoods/: scripts.inc
emerald/data/maps/Route104/: scripts.inc
emerald/data/maps/Route109/: scripts.inc
emerald/data/maps/Route110_TrickHouseEnd/: scripts.inc
emerald/data/maps/Route110_TrickHouseEntrance/: scripts.inc
emerald/data/maps/Route111/: scripts.inc
emerald/data/maps/Route111_WinstrateFamilysHouse/: scripts.inc
emerald/data/maps/Route114/: scripts.inc
emerald/data/maps/Route114_FossilManiacsHouse/: scripts.inc
emerald/data/maps/Route116/: scripts.inc
emerald/data/maps/Route119/: scripts.inc
emerald/data/maps/Route123/: scripts.inc
emerald/data/maps/RustboroCity/: scripts.inc
emerald/data/maps/RustboroCity_CuttersHouse/: scripts.inc
emerald/data/maps/RustboroCity_Flat2_2F/: scripts.inc
emerald/data/maps/RustboroCity_Gym/: scripts.inc
emerald/data/maps/RustboroCity_PokemonSchool/: scripts.inc
emerald/data/maps/RusturfTunnel/: scripts.inc
emerald/data/maps/SSTidalRooms/: scripts.inc
emerald/data/maps/ShoalCave_LowTideLowerRoom/: scripts.inc
emerald/data/maps/SlateportCity_BattleTentLobby/: scripts.inc
emerald/data/maps/SlateportCity_Harbor/: scripts.inc
emerald/data/maps/SlateportCity_OceanicMuseum_1F/: scripts.inc
emerald/data/maps/SlateportCity_PokemonFanClub/: scripts.inc
emerald/data/maps/SootopolisCity/: scripts.inc
emerald/data/maps/SootopolisCity_Gym_1F/: scripts.inc
emerald/data/maps/SootopolisCity_House1/: scripts.inc
emerald/data/maps/VerdanturfTown_BattleTentLobby/: scripts.inc
emerald/data/scripts/: field_move_scripts.inc  obtain_item.inc  players_house.inc  secret_power_tm.inc  surf.inc
emerald/include/: config.h  data.h  field_player_avatar.h  item.h  item_use.h  move.h  overrides.h  pokemon.h  strings.h
emerald/include/config/: battle.h  debug.h  general.h  item.h  save.h  summary_screen.h
emerald/include/constants/: abilities.h  conf_flags.h  flags.h  global.h  items.h  moves.h  offsets.h  opponents.h  species.h
emerald/src/: battle_anim.c  battle_controller_player.c  battle_controllers.c  battle_debug.c  battle_dynamax.c  battle_interface.c  battle_main.c  battle_message.c  battle_script_commands.c  battle_z_move.c  berry.c  debug.c  dexnav.c  field_control_avatar.c  field_player_avatar.c  field_specials.c  item.c  item_ball.c  item_use.c  new_game.c  overrides.c  overworld.c  party_menu.c  pokedex_plus_hgss.c  pokemon.c  pokemon_summary_screen.c  starter_choose.c  strings.c  strings_pokemon_species.c  use_pokeblock.c  wild_encounter.c
emerald/src/data/: abilities.h  battle_partners.h  items.h  moves_info.h  trainers.h  trainers.party
emerald/src/data/pokemon/: form_change_tables.h  species_info.h
emerald/src/data/pokemon/level_up_learnsets/: gen_9.h
emerald/src/data/pokemon/species_info/: gen_1_families.h  gen_2_families.h  gen_3_families.h  gen_4_families.h  gen_5_families.h  gen_6_families.h  gen_7_families.h  gen_8_families.h  gen_9_families.h
include/: emerald-em.h
scripts/: make_delta.py  make_lang.py  make_meta.py  make_offsets.py
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  main.cpp
src/gui/: CMakeLists.txt  GenerateTask.cpp  GenerateTask.h  LangSelector.cpp  LangSelector.h  MainWindow.cpp  MainWindow.h  PathSelector.cpp  PathSelector.h  main.cpp
src/libemerald/: API.cpp  CMakeLists.txt  Config.cpp  Config.h  Context.cpp  Context.h  Database.cpp  Log.cpp  Log.h  Pokemon.cpp  Pokemon.h  PokemonGenerator.cpp  PokemonGenerator.h  Random.cpp  Rom.cpp  Rom.h  ShuffleGrowthRate.cpp  ShuffleItems.cpp  ShuffleStarters.cpp  ShuffleTrainers.cpp  Shuffler.cpp  Shuffler.h  ShufflerAbilities.cpp  ShufflerEvolutions.cpp  ShufflerStats.cpp  SpeciesGroups.cpp  SpeciesGroups.h
src/shuffler/: CMakeLists.txt  Data.h  Database.cpp  Database.h  Pokemon.cpp  Pokemon.h  Random.cpp  Random.h  Rom.cpp  Rom.h  ShuffleGrowthRate.cpp  ShuffleItems.cpp  ShuffleTmHm.cpp  ShuffleTrainers.cpp  Shuffler.cpp  Shuffler.h  ShufflerAbilities.cpp  ShufflerEvolutions.cpp  ShufflerStats.cpp  SpeciesGroups.cpp  SpeciesGroups.h  main.cpp
